--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Aantor Kar",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^17.2.3",
     "express": "^5.1.0"
   },
   "devDependencies": {
